chore($env): added `STORAGE_EXCLUDE_SITES` in .env.example

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,9 @@ DATABASE = Local
 # Directory path for storage
 STORAGE_DIR = Pictures
 
+# List of sites to skip storage archives, lowercased
+STORAGE_EXCLUDE_SITES =
+
 # Whether to make this bot public
 IS_PUBLIC = false
 
