chore: added log info

--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,7 @@ DATABASE = Local
 # Directory path for storage
 STORAGE_DIR = Pictures
 
-# List of sites to skip storage archives, lowercased
+# List of sites to skip storage archives
 STORAGE_EXCLUDE_SITES =
 
 # Whether to make this bot public
